--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CH-ALLOSH ULTIMATE 👑</title>
+    <title>CH-ALLOSH ULTIMATE V9 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
@@ -12,88 +12,97 @@
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         body { background: var(--bg); color: white; overflow: hidden; position: fixed; width: 100%; height: 100%; }
 
-        /* الهيدر */
         .top-bar { height: 60px; background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
         
         /* قائمة المتصلين */
         .side { position: fixed; top: 60px; bottom: 70px; width: 280px; background: #0a0a0a; left: -280px; transition: 0.4s; z-index: 1500; border-left: 1px solid #222; overflow-y: auto; }
         .side.open { left: 0; }
 
-        /* ستايل علوش الفخم */
+        /* ستايل علوش الملكي + التاج الجبير */
+        .allosh-king-container { text-align: center; padding: 20px 10px; position: relative; }
         .allosh-king {
-            font-size: 24px; font-weight: 900; padding: 15px;
+            font-size: 26px; font-weight: 900;
             background: linear-gradient(90deg, #fff, #ffae00, #ff0000, #fff);
             background-size: 200%; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            animation: shine 3s infinite; text-align: center; display: block;
+            animation: shine 3s infinite; display: inline-block; vertical-align: middle;
         }
+        .big-crown { font-size: 40px; display: block; margin-bottom: -10px; animation: pulse 1.5s infinite; filter: drop-shadow(0 0 10px gold); }
+        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.2); } 100% { transform: scale(1); } }
         @keyframes shine { to { background-position: 200% center; } }
 
-        /* الشات */
-        .chat-view { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; position: absolute; top: 60px; bottom: 70px; width: 100%; }
+        /* الشات والرسائل */
+        .chat-view { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; position: absolute; top: 60px; bottom: 85px; width: 100%; }
         .msg-container { display: flex; align-items: flex-start; gap: 10px; }
         .u-avatar { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--main); object-fit: cover; }
         .msg-body { flex: 1; background: #151515; padding: 12px; border-radius: 15px; border-right: 4px solid var(--main); }
+        .sent-img { max-width: 100%; border-radius: 10px; margin-top: 10px; border: 1px solid #333; }
 
-        /* النافذة المنبثقة */
+        /* نافذة الإيموجيات */
+        #emoji-panel { display: none; position: absolute; bottom: 85px; left: 10px; right: 10px; background: #111; border: 1px solid var(--main); border-radius: 15px; padding: 10px; z-index: 2000; grid-template-columns: repeat(5, 1fr); gap: 10px; text-align: center; font-size: 25px; }
+        .emoji-item { cursor: pointer; transition: 0.2s; } .emoji-item:hover { transform: scale(1.3); }
+
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 3000; }
         .modal-card { background: white; width: 90%; max-width: 380px; border-radius: 25px; color: #333; overflow: hidden; text-align: center; }
-        .modal-body { padding: 20px; max-height: 500px; overflow-y: auto; }
 
-        /* أزرار الإدارة (مخفية) */
-        #admin-panel { display: none; margin-top: 15px; padding: 10px; border: 2px dashed red; border-radius: 15px; }
-        .admin-btn { background: red; color: white; border: none; padding: 8px; margin: 4px; border-radius: 8px; width: 45%; cursor: pointer; }
-
-        .input-box { width: 100%; padding: 10px; margin: 10px 0; border-radius: 10px; border: 1px solid #ddd; text-align: center; font-weight: bold; }
-        .bottom-bar { position: fixed; bottom: 0; height: 70px; width: 100%; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; }
+        /* البار السفلي */
+        .bottom-bar { position: fixed; bottom: 0; height: 85px; width: 100%; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 8px; }
+        .btn-plus { width: 40px; height: 40px; background: #222; border: 1px solid #444; color: var(--main); border-radius: 50%; font-size: 24px; cursor: pointer; }
+        .btn-emoji { font-size: 24px; cursor: pointer; background: none; border: none; }
         #in { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
+        .send-btn { background: var(--main); border: none; width: 45px; height: 45px; border-radius: 50%; color: white; }
     </style>
 </head>
 <body>
 
+<div id="emoji-panel">
+    <span class="emoji-item" onclick="sendEmoji('🔥')">🔥</span>
+    <span class="emoji-item" onclick="sendEmoji('👑')">👑</span>
+    <span class="emoji-item" onclick="sendEmoji('🤣')">🤣</span>
+    <span class="emoji-item" onclick="sendEmoji('❤️')">❤️</span>
+    <span class="emoji-item" onclick="sendEmoji('🤴')">🤴</span>
+    <span class="emoji-item" onclick="sendEmoji('💎')">💎</span>
+    <span class="emoji-item" onclick="sendEmoji('🚀')">🚀</span>
+    <span class="emoji-item" onclick="sendEmoji('🦾')">🦾</span>
+    <span class="emoji-item" onclick="sendEmoji('🧿')">🧿</span>
+    <span class="emoji-item" onclick="sendEmoji('🦁')">🦁</span>
+</div>
+
 <div id="settings-modal" class="modal">
     <div class="modal-card">
-        <div style="padding:15px; background:#f8f9fa; font-weight:bold;">⚙️ الملف الشخصي</div>
-        <div class="modal-body">
+        <div style="padding:15px; background:#f8f9fa; font-weight:bold;">⚙️ ملف الشخصي</div>
+        <div style="padding:20px;">
             <img id="p-img" onclick="adminClick()" src="" style="width:90px; height:90px; border-radius:50%; border:3px solid var(--main); cursor:pointer;">
             <p id="p-rank" style="color:var(--main); font-weight:bold; margin-top:5px;"></p>
             <button onclick="changePhoto()" style="margin:10px 0; padding:5px 15px; background:#eee; border:none; border-radius:8px;">تغيير الصورة 📷</button>
-            
-            <hr>
-            <p style="font-weight:bold; margin-top:10px;">زخرف اسمك بنفسك:</p>
-            <input type="text" id="custom-name" class="input-box" placeholder="اكتب اسمك المزخرف هنا...">
+            <input type="text" id="custom-name" style="width:100%; padding:10px; margin:10px 0; border:1px solid #ddd; border-radius:10px; text-align:center;" placeholder="زخرف اسمك هنا...">
             <button onclick="saveCustomName()" style="width:100%; padding:10px; background:var(--main); color:white; border:none; border-radius:10px;">حفظ الزخرفة ✨</button>
-
-            <div id="admin-panel">
-                <p style="color:red; font-weight:bold;">🛡️ لوحة الإمبراطور</p>
-                <button class="admin-btn" onclick="db.ref('msgs_v8').remove()">مسح الشات 🧹</button>
-                <button class="admin-btn" onclick="alert('تم تفعيل الحماية القصوى')">حماية 🛡️</button>
+            <div id="admin-panel" style="display:none; margin-top:15px; border:2px dashed red; padding:10px;">
+                <button onclick="db.ref('msgs_v9').remove()" style="color:red; background:none; border:none; font-weight:bold;">مسح الشات 🧹</button>
             </div>
         </div>
-        <button onclick="closeM()" style="width:100%; padding:15px; background:#000; color:white; border:none; font-weight:bold;">إغلاق</button>
+        <button onclick="closeM()" style="width:100%; padding:15px; background:#000; color:white; border:none;">إغلاق</button>
     </div>
 </div>
 
 <div class="top-bar">
     <button onclick="toggleSide()" style="background:none; border:none; font-size:26px; color:white;">👥</button>
-    <div style="color:var(--main); font-weight:900;">CH-ALLOSH KING 👑</div>
-    <button onclick="openM()" style="background:none; border:none; font-size:26px; color:white;">⚙️</button>
+    <div style="color:var(--main); font-weight:900;">ALLOSH V9 👑</div>
+    <button onclick="location.reload()" style="background:none; border:none; font-size:26px; color:white;">🔄</button>
 </div>
 
 <div class="chat-view" id="chat-box"></div>
 
 <div id="side-u" class="side">
     <div style="padding:20px;">
-        <div style="background:rgba(0,212,255,0.1); padding:10px; border-radius:12px; border:1px solid var(--bot); text-align:center; margin-bottom:15px;">
-            <b style="color:var(--bot);">🛡️ بوت الحماية</b><br><small>نشط دائماً</small>
-        </div>
-        <h3>👤 المتصلون</h3><hr style="border:0.1px solid #222; margin:10px 0;">
         <div id="u-list"></div>
     </div>
 </div>
 
 <div class="bottom-bar">
+    <button class="btn-plus" onclick="sendPhoto()">+</button>
+    <button class="btn-emoji" onclick="toggleEmoji()">😊</button>
     <input type="text" id="in" placeholder="تكلم يا ملك..." onkeypress="if(event.key==='Enter') send()">
-    <button onclick="send()" style="background:var(--main); border:none; width:50px; height:50px; border-radius:50%; color:white;">🚀</button>
+    <button class="send-btn" onclick="send()">🚀</button>
 </div>
 
 <script>
@@ -102,57 +111,31 @@
     const db = firebase.database();
 
     let clicks = 0;
-    let me = JSON.parse(localStorage.getItem('allosh_final_v8')) || {
+    let me = JSON.parse(localStorage.getItem('allosh_final_v9')) || {
         id: "u_" + Math.random().toString(16).slice(2,8),
-        name: "علوش",
+        name: "زائر",
         avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
         rank: "عضو"
     };
 
-    function openM() { 
-        document.getElementById('settings-modal').style.display='flex'; 
-        document.getElementById('p-img').src = me.avatar;
-        document.getElementById('p-rank').innerText = me.rank;
-        document.getElementById('custom-name').value = me.name;
-    }
+    function openM() { document.getElementById('settings-modal').style.display='flex'; document.getElementById('p-img').src = me.avatar; document.getElementById('p-rank').innerText = me.rank; document.getElementById('custom-name').value = me.name; }
     function closeM() { document.getElementById('settings-modal').style.display='none'; }
     function toggleSide() { document.getElementById('side-u').classList.toggle('open'); }
+    function toggleEmoji() { let p = document.getElementById('emoji-panel'); p.style.display = p.style.display === 'grid' ? 'none' : 'grid'; }
 
-    // نظام الإدارة السري (5 ضغطات)
-    function adminClick() {
-        clicks++;
-        if(clicks >= 5) {
-            let pass = prompt("أدخل رمز الإدارة السري:");
-            if(pass === "1234") {
-                document.getElementById('admin-panel').style.display = 'block';
-                me.rank = "صاحب الشات 👑";
-                save();
-                alert("أهلاً بك يا إمبراطور ✅");
-            }
-            clicks = 0;
-        }
-    }
-
-    function saveCustomName() {
-        let val = document.getElementById('custom-name').value;
-        if(val) { me.name = val; save(); alert("تم حفظ زخرفتك بنجاح!"); }
-    }
-
-    function save() {
-        localStorage.setItem('allosh_final_v8', JSON.stringify(me));
-        db.ref('users_v8/'+me.id).set(me);
-    }
+    function adminClick() { clicks++; if(clicks >= 5) { let p = prompt("الرمز السري:"); if(p==="1234"){ me.rank="صاحب الشات 👑"; document.getElementById('admin-panel').style.display='block'; save(); } clicks=0; } }
+    function saveCustomName() { me.name = document.getElementById('custom-name').value; save(); alert("تم الحفظ"); }
+    function save() { localStorage.setItem('allosh_final_v9', JSON.stringify(me)); db.ref('users_v9/'+me.id).set(me); }
 
     function start() {
         save();
-        db.ref('users_v8/'+me.id).onDisconnect().remove();
-
-        db.ref('users_v8').on('value', s => {
+        db.ref('users_v9/'+me.id).onDisconnect().remove();
+        db.ref('users_v9').on('value', s => {
             let h = "";
             s.forEach(u => {
                 let d = u.val();
                 if(d.rank.includes("صاحب")) {
-                    h += `<div class="allosh-king">${d.name}</div>`;
+                    h += `<div class="allosh-king-container"><span class="big-crown">👑</span><span class="allosh-king">${d.name}</span></div>`;
                 } else {
                     h += `<div style="padding:10px; color:#ccc; border-bottom:1px solid #111;">● ${d.name}</div>`;
                 }
@@ -160,29 +143,44 @@
             document.getElementById('u-list').innerHTML = h;
         });
 
-        db.ref('msgs_v8').limitToLast(40).on('child_added', s => {
+        db.ref('msgs_v9').limitToLast(30).on('child_added', s => {
             let d = s.val();
             let box = document.getElementById('chat-box');
             let div = document.createElement('div');
             div.className = "msg-container";
-            div.innerHTML = `<img src="${d.avatar}" class="u-avatar"><div class="msg-body"><b style="color:var(--main); font-size:13px;">${d.sender}</b><div style="color:#eee; margin-top:5px;">${d.text}</div></div>`;
+            let content = d.type === 'img' ? `<img src="${d.text}" class="sent-img">` : d.text;
+            div.innerHTML = `<img src="${d.avatar}" class="u-avatar"><div class="msg-body"><b style="color:var(--main)">${d.sender}</b><br>${content}</div>`;
             box.appendChild(div);
             box.scrollTop = box.scrollHeight;
         });
     }
 
-    function send() {
-        let i = document.getElementById('in');
-        if(!i.value) return;
-        db.ref('msgs_v8').push({ sender: me.name, text: i.value, avatar: me.avatar, rank: me.rank });
-        i.value = "";
+    function send() { 
+        let i = document.getElementById('in'); if(!i.value) return;
+        db.ref('msgs_v9').push({ sender: me.name, text: i.value, avatar: me.avatar, rank: me.rank, type: 'text' });
+        i.value = ""; 
+    }
+
+    function sendEmoji(e) {
+        db.ref('msgs_v9').push({ sender: me.name, text: e, avatar: me.avatar, rank: me.rank, type: 'text' });
+        toggleEmoji();
+    }
+
+    function sendPhoto() {
+        let i = document.createElement('input'); i.type='file'; i.accept='image/*';
+        i.onchange = e => {
+            let r = new FileReader();
+            r.onload = ev => { db.ref('msgs_v9').push({ sender: me.name, text: ev.target.result, avatar: me.avatar, rank: me.rank, type: 'img' }); };
+            r.readAsDataURL(e.target.files[0]);
+        };
+        i.click();
     }
 
     function changePhoto() {
         let i = document.createElement('input'); i.type='file'; i.accept='image/*';
         i.onchange = e => {
             let r = new FileReader();
-            r.onload = ev => { me.avatar = ev.target.result; save(); document.getElementById('p-img').src = me.avatar; };
+            r.onload = ev => { me.avatar = ev.target.result; save(); location.reload(); };
             r.readAsDataURL(e.target.files[0]);
         };
         i.click();
