--- a/index.html
+++ b/index.html
@@ -3,106 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CH-ALLOSH ULTIMATE V9 👑</title>
+    <title>CH-ALLOSH FINAL SUPREME 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600;900&display=swap');
         :root { --main: #ff6a00; --bg: #000; --bot: #00d4ff; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
-        body { background: var(--bg); color: white; overflow: hidden; position: fixed; width: 100%; height: 100%; }
-
-        .top-bar { height: 60px; background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
         
-        /* قائمة المتصلين */
-        .side { position: fixed; top: 60px; bottom: 70px; width: 280px; background: #0a0a0a; left: -280px; transition: 0.4s; z-index: 1500; border-left: 1px solid #222; overflow-y: auto; }
+        /* خلفية النجوم الثابتة والمتحركة */
+        body { background: #000; color: white; overflow: hidden; position: fixed; width: 100%; height: 100%; }
+        .stars { position: fixed; width: 100%; height: 100%; background: url('https://www.transparenttextures.com/patterns/stardust.png'); z-index: -1; animation: moveStars 50s linear infinite; }
+        @keyframes moveStars { from { background-position: 0 0; } to { background-position: 1000px 1000px; } }
+
+        /* الهيدر */
+        .top-bar { height: 60px; background: rgba(0,0,0,0.9); border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
+        
+        /* القائمة الجانبية للمتصلين */
+        .side { position: fixed; top: 60px; bottom: 85px; width: 280px; background: rgba(10,10,10,0.95); left: -280px; transition: 0.3s; z-index: 1500; border-left: 1px solid #333; overflow-y: auto; backdrop-filter: blur(10px); }
         .side.open { left: 0; }
 
-        /* ستايل علوش الملكي + التاج الجبير */
-        .allosh-king-container { text-align: center; padding: 20px 10px; position: relative; }
-        .allosh-king {
-            font-size: 26px; font-weight: 900;
-            background: linear-gradient(90deg, #fff, #ffae00, #ff0000, #fff);
-            background-size: 200%; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            animation: shine 3s infinite; display: inline-block; vertical-align: middle;
-        }
-        .big-crown { font-size: 40px; display: block; margin-bottom: -10px; animation: pulse 1.5s infinite; filter: drop-shadow(0 0 10px gold); }
-        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.2); } 100% { transform: scale(1); } }
-        @keyframes shine { to { background-position: 200% center; } }
+        /* ستايل علوش الملكي */
+        .allosh-king-container { text-align: center; padding: 20px 10px; }
+        .big-crown { font-size: 50px; display: block; animation: crownPulse 1.5s infinite; filter: drop-shadow(0 0 15px gold); }
+        @keyframes crownPulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.2); } }
+        .allosh-name { font-size: 26px; font-weight: 900; background: linear-gradient(to right, #fff, gold, #ff6a00); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 
-        /* الشات والرسائل */
-        .chat-view { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; position: absolute; top: 60px; bottom: 85px; width: 100%; }
+        /* الشات */
+        .chat-view { position: absolute; top: 60px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
         .msg-container { display: flex; align-items: flex-start; gap: 10px; }
         .u-avatar { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--main); object-fit: cover; }
-        .msg-body { flex: 1; background: #151515; padding: 12px; border-radius: 15px; border-right: 4px solid var(--main); }
-        .sent-img { max-width: 100%; border-radius: 10px; margin-top: 10px; border: 1px solid #333; }
-
-        /* نافذة الإيموجيات */
-        #emoji-panel { display: none; position: absolute; bottom: 85px; left: 10px; right: 10px; background: #111; border: 1px solid var(--main); border-radius: 15px; padding: 10px; z-index: 2000; grid-template-columns: repeat(5, 1fr); gap: 10px; text-align: center; font-size: 25px; }
-        .emoji-item { cursor: pointer; transition: 0.2s; } .emoji-item:hover { transform: scale(1.3); }
-
-        .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 3000; }
-        .modal-card { background: white; width: 90%; max-width: 380px; border-radius: 25px; color: #333; overflow: hidden; text-align: center; }
+        .msg-body { flex: 1; background: rgba(30,30,30,0.8); padding: 12px; border-radius: 15px; border-right: 4px solid var(--main); }
+        .msg-img { max-width: 100%; border-radius: 10px; margin-top: 8px; }
 
         /* البار السفلي */
-        .bottom-bar { position: fixed; bottom: 0; height: 85px; width: 100%; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 8px; }
-        .btn-plus { width: 40px; height: 40px; background: #222; border: 1px solid #444; color: var(--main); border-radius: 50%; font-size: 24px; cursor: pointer; }
-        .btn-emoji { font-size: 24px; cursor: pointer; background: none; border: none; }
+        .bottom-bar { position: fixed; bottom: 0; height: 85px; width: 100%; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 8px; z-index: 2000; }
         #in { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
-        .send-btn { background: var(--main); border: none; width: 45px; height: 45px; border-radius: 50%; color: white; }
+        .btn-action { background: none; border: none; font-size: 26px; cursor: pointer; color: white; }
+
+        /* لوحة الإيموجيات المتحركة */
+        #emoji-panel { display: none; position: absolute; bottom: 90px; left: 10px; right: 10px; background: #111; border: 1px solid var(--main); border-radius: 15px; padding: 10px; display: none; grid-template-columns: repeat(4, 1fr); gap: 10px; }
+        .emoji-gif { width: 100%; cursor: pointer; transition: 0.2s; border-radius: 8px; }
+
+        .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 4000; }
+        .modal-card { background: white; width: 90%; max-width: 380px; border-radius: 25px; color: #333; padding: 20px; text-align: center; }
     </style>
 </head>
 <body>
 
-<div id="emoji-panel">
-    <span class="emoji-item" onclick="sendEmoji('🔥')">🔥</span>
-    <span class="emoji-item" onclick="sendEmoji('👑')">👑</span>
-    <span class="emoji-item" onclick="sendEmoji('🤣')">🤣</span>
-    <span class="emoji-item" onclick="sendEmoji('❤️')">❤️</span>
-    <span class="emoji-item" onclick="sendEmoji('🤴')">🤴</span>
-    <span class="emoji-item" onclick="sendEmoji('💎')">💎</span>
-    <span class="emoji-item" onclick="sendEmoji('🚀')">🚀</span>
-    <span class="emoji-item" onclick="sendEmoji('🦾')">🦾</span>
-    <span class="emoji-item" onclick="sendEmoji('🧿')">🧿</span>
-    <span class="emoji-item" onclick="sendEmoji('🦁')">🦁</span>
-</div>
+<div class="stars"></div>
 
 <div id="settings-modal" class="modal">
     <div class="modal-card">
-        <div style="padding:15px; background:#f8f9fa; font-weight:bold;">⚙️ ملف الشخصي</div>
-        <div style="padding:20px;">
-            <img id="p-img" onclick="adminClick()" src="" style="width:90px; height:90px; border-radius:50%; border:3px solid var(--main); cursor:pointer;">
-            <p id="p-rank" style="color:var(--main); font-weight:bold; margin-top:5px;"></p>
-            <button onclick="changePhoto()" style="margin:10px 0; padding:5px 15px; background:#eee; border:none; border-radius:8px;">تغيير الصورة 📷</button>
-            <input type="text" id="custom-name" style="width:100%; padding:10px; margin:10px 0; border:1px solid #ddd; border-radius:10px; text-align:center;" placeholder="زخرف اسمك هنا...">
-            <button onclick="saveCustomName()" style="width:100%; padding:10px; background:var(--main); color:white; border:none; border-radius:10px;">حفظ الزخرفة ✨</button>
-            <div id="admin-panel" style="display:none; margin-top:15px; border:2px dashed red; padding:10px;">
-                <button onclick="db.ref('msgs_v9').remove()" style="color:red; background:none; border:none; font-weight:bold;">مسح الشات 🧹</button>
-            </div>
-        </div>
-        <button onclick="closeM()" style="width:100%; padding:15px; background:#000; color:white; border:none;">إغلاق</button>
+        <h3 style="margin-bottom:15px;">⚙️ الإعدادات</h3>
+        <img id="p-img" onclick="adminCheck()" src="" style="width:90px; height:90px; border-radius:50%; border:3px solid var(--main); cursor:pointer;">
+        <input type="text" id="custom-name" style="width:100%; padding:12px; margin:15px 0; border:1px solid #ddd; border-radius:12px; text-align:center;" placeholder="اكتب زخرفتك هنا...">
+        <button onclick="changePhoto()" style="padding:10px; border:none; background:#eee; border-radius:10px; margin-bottom:10px; width:100%;">تغيير الصورة 📷</button>
+        <button onclick="saveProfile()" style="width:100%; padding:15px; background:var(--main); color:white; border:none; border-radius:12px; font-weight:bold;">حفظ الزخرفة ✨</button>
+        <button onclick="closeM()" style="width:100%; padding:10px; background:#000; color:white; border:none; border-radius:12px; margin-top:10px;">إغلاق</button>
     </div>
 </div>
 
 <div class="top-bar">
-    <button onclick="toggleSide()" style="background:none; border:none; font-size:26px; color:white;">👥</button>
-    <div style="color:var(--main); font-weight:900;">ALLOSH V9 👑</div>
-    <button onclick="location.reload()" style="background:none; border:none; font-size:26px; color:white;">🔄</button>
+    <button onclick="toggleSide()" class="btn-action">👥</button>
+    <div style="color:var(--main); font-weight:900; font-size:20px;">ALLOSH SUPREME</div>
+    <button onclick="location.reload()" class="btn-action">🔄</button>
 </div>
 
 <div class="chat-view" id="chat-box"></div>
 
-<div id="side-u" class="side">
-    <div style="padding:20px;">
+<div id="side-menu" class="side">
+    <div style="padding:15px;">
+        <div id="bot-status" style="background:rgba(0,212,255,0.1); border:1px solid var(--bot); padding:10px; border-radius:15px; text-align:center; margin-bottom:20px;">
+            <b style="color:var(--bot);">🛡️ بوت الحماية الملكي</b><br><small>مراقب الشات نشط</small>
+        </div>
         <div id="u-list"></div>
     </div>
 </div>
 
+<div id="emoji-panel">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/v6aOebdclIYBkPjn9D/giphy.gif" onclick="sendEmoji(this.src)">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnRwaGN4NnlyZ3N5ZzR4ZzR4ZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/L2S1Y7Z9Xf3mD5uB5y/giphy.gif" onclick="sendEmoji(this.src)">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnZ4ZzR4ZzR4ZzR4ZzR4ZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/3o7TKVUn7iM8FMEU24/giphy.gif" onclick="sendEmoji(this.src)">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZnRwaGN4NnlyZ3N5ZzR4ZzR4ZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/8vIFoK3N6R4FwK2vC7/giphy.gif" onclick="sendEmoji(this.src)">
+</div>
+
 <div class="bottom-bar">
-    <button class="btn-plus" onclick="sendPhoto()">+</button>
-    <button class="btn-emoji" onclick="toggleEmoji()">😊</button>
-    <input type="text" id="in" placeholder="تكلم يا ملك..." onkeypress="if(event.key==='Enter') send()">
-    <button class="send-btn" onclick="send()">🚀</button>
+    <button class="btn-action" style="color:var(--main); font-weight:bold;" onclick="sendPhoto()">➕</button>
+    <button class="btn-action" onclick="toggleEmojiPanel()">😊</button>
+    <input type="text" id="in" placeholder="اكتب يا إمبراطور..." onkeypress="if(event.key==='Enter') send()">
+    <button class="btn-action" onclick="send()">🚀</button>
+    <button onclick="openM()" class="btn-action">⚙️</button>
 </div>
 
 <script>
@@ -110,46 +101,54 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let clicks = 0;
-    let me = JSON.parse(localStorage.getItem('allosh_final_v9')) || {
+    let adminClicks = 0;
+    let me = JSON.parse(localStorage.getItem('allosh_supreme_v10')) || {
         id: "u_" + Math.random().toString(16).slice(2,8),
-        name: "زائر",
+        name: "علوش",
         avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
         rank: "عضو"
     };
 
-    function openM() { document.getElementById('settings-modal').style.display='flex'; document.getElementById('p-img').src = me.avatar; document.getElementById('p-rank').innerText = me.rank; document.getElementById('custom-name').value = me.name; }
-    function closeM() { document.getElementById('settings-modal').style.display='none'; }
-    function toggleSide() { document.getElementById('side-u').classList.toggle('open'); }
-    function toggleEmoji() { let p = document.getElementById('emoji-panel'); p.style.display = p.style.display === 'grid' ? 'none' : 'grid'; }
+    function saveProfile() {
+        me.name = document.getElementById('custom-name').value || "علوش";
+        if(me.name.includes("علوش") || me.name.includes("عـلـ★ـش")) me.rank = "صاحب الشات 👑";
+        localStorage.setItem('allosh_supreme_v10', JSON.stringify(me));
+        db.ref('users_v10/'+me.id).set(me);
+        alert("تم الحفظ بنجاح!");
+    }
 
-    function adminClick() { clicks++; if(clicks >= 5) { let p = prompt("الرمز السري:"); if(p==="1234"){ me.rank="صاحب الشات 👑"; document.getElementById('admin-panel').style.display='block'; save(); } clicks=0; } }
-    function saveCustomName() { me.name = document.getElementById('custom-name').value; save(); alert("تم الحفظ"); }
-    function save() { localStorage.setItem('allosh_final_v9', JSON.stringify(me)); db.ref('users_v9/'+me.id).set(me); }
+    function toggleSide() { document.getElementById('side-menu').classList.toggle('open'); }
+    function openM() { document.getElementById('settings-modal').style.display='flex'; document.getElementById('p-img').src = me.avatar; document.getElementById('custom-name').value = me.name; }
+    function closeM() { document.getElementById('settings-modal').style.display='none'; }
+    function toggleEmojiPanel() { let p = document.getElementById('emoji-panel'); p.style.display = (p.style.display==='grid'?'none':'grid'); }
+
+    function adminCheck() { adminClicks++; if(adminClicks>=5) { let p = prompt("الرمز السري:"); if(p==="1234") { me.rank="صاحب الشات 👑"; saveProfile(); alert("تم تفعيل الإدارة ✅"); } adminClicks=0; } }
 
     function start() {
-        save();
-        db.ref('users_v9/'+me.id).onDisconnect().remove();
-        db.ref('users_v9').on('value', s => {
+        db.ref('users_v10/'+me.id).set(me);
+        db.ref('users_v10/'+me.id).onDisconnect().remove();
+
+        db.ref('users_v10').on('value', s => {
             let h = "";
             s.forEach(u => {
                 let d = u.val();
                 if(d.rank.includes("صاحب")) {
-                    h += `<div class="allosh-king-container"><span class="big-crown">👑</span><span class="allosh-king">${d.name}</span></div>`;
+                    h += `<div class="allosh-king-container"><span class="big-crown">👑</span><span class="allosh-name">${d.name}</span></div>`;
                 } else {
-                    h += `<div style="padding:10px; color:#ccc; border-bottom:1px solid #111;">● ${d.name}</div>`;
+                    h += `<div style="padding:10px; border-bottom:1px solid #222;">● ${d.name} <br><small style="color:gray">${d.rank}</small></div>`;
                 }
             });
             document.getElementById('u-list').innerHTML = h;
         });
 
-        db.ref('msgs_v9').limitToLast(30).on('child_added', s => {
+        db.ref('msgs_v10').limitToLast(30).on('child_added', s => {
             let d = s.val();
             let box = document.getElementById('chat-box');
             let div = document.createElement('div');
             div.className = "msg-container";
-            let content = d.type === 'img' ? `<img src="${d.text}" class="sent-img">` : d.text;
-            div.innerHTML = `<img src="${d.avatar}" class="u-avatar"><div class="msg-body"><b style="color:var(--main)">${d.sender}</b><br>${content}</div>`;
+            let content = d.type === 'img' ? `<img src="${d.text}" class="msg-img">` : d.text;
+            div.innerHTML = `<img src="${d.avatar}" class="u-avatar">
+                             <div class="msg-body"><b style="color:var(--main)">${d.sender}</b><br>${content}</div>`;
             box.appendChild(div);
             box.scrollTop = box.scrollHeight;
         });
@@ -157,20 +156,20 @@
 
     function send() { 
         let i = document.getElementById('in'); if(!i.value) return;
-        db.ref('msgs_v9').push({ sender: me.name, text: i.value, avatar: me.avatar, rank: me.rank, type: 'text' });
+        db.ref('msgs_v10').push({ sender: me.name, text: i.value, avatar: me.avatar, rank: me.rank, type: 'text' });
         i.value = ""; 
     }
 
-    function sendEmoji(e) {
-        db.ref('msgs_v9').push({ sender: me.name, text: e, avatar: me.avatar, rank: me.rank, type: 'text' });
-        toggleEmoji();
+    function sendEmoji(url) {
+        db.ref('msgs_v10').push({ sender: me.name, text: url, avatar: me.avatar, rank: me.rank, type: 'img' });
+        toggleEmojiPanel();
     }
 
     function sendPhoto() {
         let i = document.createElement('input'); i.type='file'; i.accept='image/*';
         i.onchange = e => {
             let r = new FileReader();
-            r.onload = ev => { db.ref('msgs_v9').push({ sender: me.name, text: ev.target.result, avatar: me.avatar, rank: me.rank, type: 'img' }); };
+            r.onload = ev => { db.ref('msgs_v10').push({ sender: me.name, text: ev.target.result, avatar: me.avatar, rank: me.rank, type: 'img' }); };
             r.readAsDataURL(e.target.files[0]);
         };
         i.click();
@@ -180,7 +179,7 @@
         let i = document.createElement('input'); i.type='file'; i.accept='image/*';
         i.onchange = e => {
             let r = new FileReader();
-            r.onload = ev => { me.avatar = ev.target.result; save(); location.reload(); };
+            r.onload = ev => { me.avatar = ev.target.result; saveProfile(); location.reload(); };
             r.readAsDataURL(e.target.files[0]);
         };
         i.click();
