--- a/index.html
+++ b/index.html
@@ -3,94 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CH-ALLOSH EMPIRE V14 👑</title>
+    <title>CH-ALLOSH EMPIRE V15 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --main: #ff6a00; --blue: #3498db; --bg: #0b0f15; }
+        :root { --main: #ff6a00; --bot-color: #00d4ff; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         
         body { background: #000; color: white; overflow: hidden; position: fixed; width: 100%; height: 100%; }
-        .stars { position: fixed; inset: 0; background: url('https://www.transparenttextures.com/patterns/stardust.png'); z-index: -1; animation: move 50s linear infinite; opacity: 0.6; }
-        @keyframes move { from { background-position: 0 0; } to { background-position: 1000px 1000px; } }
+        .stars { position: fixed; inset: 0; background: url('https://www.transparenttextures.com/patterns/stardust.png'); z-index: -1; animation: moveStars 60s linear infinite; }
+        @keyframes moveStars { from { background-position: 0 0; } to { background-position: 1000px 1000px; } }
 
         /* الهيدر العلوي */
-        .header { height: 60px; background: rgba(20,20,20,0.95); display: flex; align-items: center; justify-content: space-around; border-bottom: 2px solid var(--main); z-index: 2000; position: relative; }
-        .h-btn { width: 32px; cursor: pointer; transition: 0.3s; }
+        .top-bar { height: 60px; background: rgba(15,15,15,0.9); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; border-bottom: 2px solid var(--main); z-index: 1000; position: relative; }
+        
+        /* القوائم الجانبية */
+        .side { position: fixed; top: 60px; bottom: 85px; width: 260px; background: rgba(10,10,10,0.95); transition: 0.3s; z-index: 1500; border: 1px solid #333; overflow-y: auto; }
+        #side-r { right: -260px; border-left: 2px solid var(--main); }
+        #side-l { left: -260px; border-right: 2px solid var(--main); }
+        .side.open { right: 0 !important; left: 0 !important; }
 
-        /* القائمة اليمنى (المتصلين) */
-        .side-right { position: fixed; top: 60px; right: -280px; width: 280px; bottom: 85px; background: rgba(15,15,15,0.98); border-left: 1px solid #333; transition: 0.4s; z-index: 1500; overflow-y: auto; }
-        .side-right.open { right: 0; }
-
-        /* القائمة اليسرى (الملف الشخصي) */
-        .side-left { position: fixed; top: 60px; left: -300px; width: 300px; bottom: 85px; background: #1a242f; border-right: 1px solid #333; transition: 0.4s; z-index: 1500; overflow-y: auto; }
-        .side-left.open { left: 0; }
-
-        /* ستايل التاج الملكي */
-        .king-box { text-align: center; padding: 20px 10px; border-bottom: 1px solid #222; }
-        .big-crown { font-size: 50px; display: block; animation: pulse 1.5s infinite; filter: drop-shadow(0 0 10px gold); }
-        .king-name { font-size: 24px; font-weight: 900; background: linear-gradient(to right, #fff, gold, #ff6a00); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
+        /* ستايل الملك علوش */
+        .king-section { text-align: center; padding: 20px 10px; }
+        .crown-anim { font-size: 50px; display: block; animation: bounce 2s infinite; filter: drop-shadow(0 0 15px gold); }
+        @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+        .king-text { font-size: 24px; font-weight: 900; background: linear-gradient(to right, #fff, gold, #ff6a00); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 
         /* الشات والرسائل */
-        .chat-area { position: absolute; top: 60px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .msg-line { display: flex; gap: 10px; align-items: flex-start; }
-        .u-img { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--main); object-fit: cover; cursor: pointer; }
-        .msg-bubble { background: rgba(30,30,30,0.8); padding: 10px; border-radius: 12px; border-right: 4px solid var(--main); max-width: 75%; }
+        .chat-view { position: absolute; top: 60px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .msg-box { display: flex; gap: 10px; align-items: flex-start; animation: fadeIn 0.3s; }
+        .u-avatar { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--main); object-fit: cover; }
+        .msg-text { background: rgba(30,30,30,0.8); padding: 10px; border-radius: 15px; border-right: 4px solid var(--main); max-width: 75%; position: relative; }
+        .bot-msg { border-right: 4px solid var(--bot-color) !important; background: rgba(0, 212, 255, 0.1) !important; }
 
-        /* لوحة الإيموجيات المتحركة GIF */
-        #emoji-box { position: absolute; bottom: 85px; width: 100%; height: 250px; background: #111; border-top: 2px solid var(--main); display: none; grid-template-columns: repeat(5, 1fr); gap: 10px; padding: 15px; overflow-y: auto; z-index: 2100; }
-        .gif-item { width: 100%; cursor: pointer; border-radius: 8px; }
+        /* لوحة الإيموجيات المتحركة */
+        #emoji-grid { position: absolute; bottom: 85px; width: 100%; height: 220px; background: #111; display: none; grid-template-columns: repeat(5, 1fr); gap: 10px; padding: 15px; overflow-y: auto; border-top: 2px solid var(--main); z-index: 2000; }
+        .emoji-gif { width: 100%; cursor: pointer; border-radius: 5px; }
 
-        /* شريط الكتابة السفلي */
-        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; z-index: 2000; }
-        #in { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
-        .btn-tool { background: none; border: none; font-size: 28px; cursor: pointer; color: white; }
+        /* البار السفلي */
+        .bottom-bar { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; display: flex; align-items: center; padding: 0 10px; gap: 10px; border-top: 1px solid #222; }
+        #input-msg { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
+        .tool-btn { background: none; border: none; font-size: 26px; cursor: pointer; color: white; }
     </style>
 </head>
 <body>
 
 <div class="stars"></div>
 
-<div class="header">
-    <img src="https://cdn-icons-png.flaticon.com/512/3580/3580229.png" class="h-btn" onclick="location.reload()" title="تحديث">
-    <div style="color:var(--main); font-weight:900; font-size:18px;">ALLOSH KING V14</div>
-    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="h-btn" onclick="toggleLeft()" title="ملفي">
-    <img src="https://cdn-icons-png.flaticon.com/512/880/880594.png" class="h-btn" onclick="toggleRight()" title="المتصلين">
+<div class="top-bar">
+    <button onclick="toggleSide('side-l')" class="tool-btn">⚙️</button>
+    <div style="color:var(--main); font-weight:900;">ALLOSH EMPIRE</div>
+    <button onclick="toggleSide('side-r')" class="tool-btn">👥</button>
 </div>
 
-<div id="side-r" class="side-right">
-    <div id="users-list"></div>
-    <div style="text-align:center; padding:15px; color:var(--blue); border-top:1px solid #222;">🛡️ بوت الحماية نشط</div>
-</div>
-
-<div id="side-l" class="side-left">
-    <div style="height:120px; background:url('https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/v6aOebdclIYBkPjn9D/giphy.gif') center; background-size:cover;"></div>
-    <div style="text-align:center; margin-top:-45px;">
-        <img id="my-p-img" src="" style="width:90px; height:90px; border-radius:50%; border:4px solid #1a242f;">
-        <h2 id="my-p-name">علوش</h2>
-        <p id="my-p-rank" style="color:var(--main); font-weight:bold;"></p>
-        <hr style="margin:20px; border:0; border-top:1px solid #333;">
-        <button onclick="changeAvatar()" style="width:80%; padding:10px; background:#222; color:white; border:none; border-radius:10px; margin-bottom:10px;">تغيير الصورة 📷</button>
-        <button onclick="openAdmin()" style="width:80%; padding:10px; background:rgba(255,0,0,0.1); color:red; border:1px solid red; border-radius:10px;">لوحة الإدارة 🛡️</button>
+<div id="side-r" class="side">
+    <div id="users-container"></div>
+    <div style="padding:15px; text-align:center; color:var(--bot-color); border-top:1px solid #222;">
+        <b>🤖 علوش بوت</b><br><small>نظام الحماية مفعل</small>
     </div>
 </div>
 
-<div id="emoji-box">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnZ4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/v6aOebdclIYBkPjn9D/giphy.gif" onclick="sendGif(this.src)">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/L2S1Y7Z9Xf3mD5uB5y/giphy.gif" onclick="sendGif(this.src)">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnZ4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/8vIFoK3N6R4FwK2vC7/giphy.gif" onclick="sendGif(this.src)">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/3o7TKVUn7iM8FMEU24/giphy.gif" onclick="sendGif(this.src)">
+<div id="side-l" class="side">
+    <div style="padding:20px; text-align:center;">
+        <h3>🛡️ لوحة التحكم</h3>
+        <hr style="margin:15px 0; opacity:0.2;">
+        <button onclick="clearChat()" style="width:100%; padding:12px; background:red; border:none; border-radius:10px; color:white; margin-bottom:10px;">مسح الشات 🧹</button>
+        <button onclick="lockChat()" style="width:100%; padding:12px; background:orange; border:none; border-radius:10px; color:white;">قفل الشات 🔒</button>
+        <hr style="margin:15px 0; opacity:0.2;">
+        <button onclick="changeName()" style="width:100%; padding:10px; background:#333; border:none; border-radius:10px; color:white;">تغيير اسمي ✨</button>
+    </div>
 </div>
 
-<div class="chat-area" id="chat-view"></div>
+<div id="emoji-grid">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnZ4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/v6aOebdclIYBkPjn9D/giphy.gif" onclick="sendEmoji(this.src)">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/L2S1Y7Z9Xf3mD5uB5y/giphy.gif" onclick="sendEmoji(this.src)">
+    <img class="emoji-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnZ4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/8vIFoK3N6R4FwK2vC7/giphy.gif" onclick="sendEmoji(this.src)">
+</div>
 
-<div class="footer">
-    <button class="btn-tool" style="color:var(--main);" onclick="uploadPhoto()">➕</button>
-    <button class="btn-tool" onclick="toggleEmoji()">😊</button>
-    <input type="text" id="in" placeholder="تكلم يا ملك..." onkeypress="if(event.key==='Enter') sendText()">
-    <button class="btn-tool" onclick="sendText()">🚀</button>
+<div class="chat-view" id="chat-box"></div>
+
+<div class="bottom-bar">
+    <button class="tool-btn" style="color:var(--main);" onclick="uploadImg()">➕</button>
+    <button class="tool-btn" onclick="toggleEmoji()">😊</button>
+    <input type="text" id="input-msg" placeholder="اكتب يا ملك..." onkeypress="if(event.key==='Enter') sendMsg()">
+    <button class="tool-btn" onclick="sendMsg()">🚀</button>
 </div>
 
 <script>
@@ -98,78 +95,82 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let me = JSON.parse(localStorage.getItem('allosh_final_v14')) || {
+    let me = JSON.parse(localStorage.getItem('allosh_v15')) || {
         id: "u_" + Math.random().toString(16).slice(2,8),
-        name: "علوش الملك",
+        name: "علوش",
         avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
         rank: "صاحب الشات 👑"
     };
 
-    function toggleRight() { document.getElementById('side-r').classList.toggle('open'); }
-    function toggleLeft() { 
-        document.getElementById('side-l').classList.toggle('open');
-        document.getElementById('my-p-img').src = me.avatar;
-        document.getElementById('my-p-name').innerText = me.name;
-        document.getElementById('my-p-rank').innerText = me.rank;
+    function toggleSide(id) { 
+        document.getElementById('side-r').classList.remove('open');
+        document.getElementById('side-l').classList.remove('open');
+        document.getElementById(id).classList.add('open');
     }
-    function toggleEmoji() { let b = document.getElementById('emoji-box'); b.style.display = (b.style.display==='grid'?'none':'grid'); }
+    document.body.onclick = (e) => { if(e.clientX > 260 && e.clientX < (window.innerWidth - 260)) { document.getElementById('side-r').classList.remove('open'); document.getElementById('side-l').classList.remove('open'); } };
 
-    function sendText() {
-        let i = document.getElementById('in'); if(!i.value) return;
-        db.ref('msgs_v14').push({ uid: me.id, name: me.name, text: i.value, avatar: me.avatar, type: 'text' });
+    function toggleEmoji() { let g = document.getElementById('emoji-grid'); g.style.display = (g.style.display==='grid'?'none':'grid'); }
+
+    function sendMsg() {
+        let i = document.getElementById('input-msg'); if(!i.value) return;
+        db.ref('msgs_v15').push({ sender: me.name, text: i.value, avatar: me.avatar, type: 'text' });
         i.value = "";
     }
 
-    function sendGif(url) {
-        db.ref('msgs_v14').push({ uid: me.id, name: me.name, text: url, avatar: me.avatar, type: 'gif' });
+    function sendEmoji(url) {
+        db.ref('msgs_v15').push({ sender: me.name, text: url, avatar: me.avatar, type: 'gif' });
         toggleEmoji();
     }
 
-    function openAdmin() {
-        let p = prompt("رمز الإدارة السرية:");
-        if(p === "1234") { if(confirm("حذف كل الرسائل؟")) db.ref('msgs_v14').remove(); }
-    }
-
     function start() {
-        db.ref('users_v14/'+me.id).set(me);
-        db.ref('users_v14/'+me.id).onDisconnect().remove();
+        db.ref('users_v15/'+me.id).set(me);
+        db.ref('users_v15/'+me.id).onDisconnect().remove();
 
-        // تحديث قائمة المتصلين مع التاج
-        db.ref('users_v14').on('value', s => {
+        // البوت يرحب بك
+        setTimeout(() => {
+            pushBotMsg(`أهلاً بك يا إمبراطور علوش، نظام الحماية V15 جاهز لخدمتك! 🛡️👑`);
+        }, 2000);
+
+        db.ref('users_v15').on('value', s => {
             let h = "";
             s.forEach(u => {
                 let d = u.val();
                 if(d.rank.includes("صاحب")) {
-                    h += `<div class="king-box"><span class="big-crown">👑</span><span class="king-name">${d.name}</span></div>`;
+                    h += `<div class="king-section"><span class="crown-anim">👑</span><span class="king-text">${d.name}</span></div>`;
                 } else {
-                    h += `<div style="padding:15px; border-bottom:1px solid #222;">● ${d.name}</div>`;
+                    h += `<div style="padding:12px; border-bottom:1px solid #222;">● ${d.name}</div>`;
                 }
             });
-            document.getElementById('users-list').innerHTML = h;
+            document.getElementById('users-container').innerHTML = h;
         });
 
-        // استقبال الرسائل
-        db.ref('msgs_v14').limitToLast(30).on('child_added', s => {
+        db.ref('msgs_v15').limitToLast(30).on('child_added', s => {
             let d = s.val();
-            let box = document.getElementById('chat-view');
+            let box = document.getElementById('chat-box');
             let div = document.createElement('div');
-            div.className = "msg-line";
-            let content = d.type === 'gif' || d.type === 'img' ? `<img src="${d.text}" style="max-width:150px; border-radius:10px;">` : d.text;
-            div.innerHTML = `<img src="${d.avatar}" class="u-img" onclick="toggleLeft()">
-                             <div class="msg-bubble"><b style="color:gold; font-size:12px;">${d.name}</b><br>${content}</div>`;
+            div.className = "msg-box";
+            let content = d.type === 'gif' ? `<img src="${d.text}" style="width:120px; border-radius:10px;">` : d.text;
+            div.innerHTML = `<img src="${d.avatar}" class="u-avatar">
+                             <div class="msg-text ${d.bot?'bot-msg':''}">
+                                <b style="color:${d.bot? 'var(--bot-color)':'var(--main)'}; font-size:12px;">${d.sender}</b><br>${content}
+                             </div>`;
             box.appendChild(div);
             box.scrollTop = box.scrollHeight;
         });
     }
 
-    function uploadPhoto() {
-        let i = document.createElement('input'); i.type='file'; i.accept='image/*';
-        i.onchange = e => {
-            let r = new FileReader();
-            r.onload = ev => { db.ref('msgs_v14').push({ uid: me.id, name: me.name, text: ev.target.result, avatar: me.avatar, type: 'img' }); };
-            r.readAsDataURL(e.target.files[0]);
-        }; i.click();
+    function pushBotMsg(txt) {
+        let box = document.getElementById('chat-box');
+        let div = document.createElement('div');
+        div.className = "msg-box";
+        div.innerHTML = `<img src="https://cdn-icons-png.flaticon.com/512/4712/4712035.png" class="u-avatar" style="border-color:var(--bot-color)">
+                         <div class="msg-text bot-msg"><b style="color:var(--bot-color)">علوش بوت 🤖</b><br>${txt}</div>`;
+        box.appendChild(div);
+        box.scrollTop = box.scrollHeight;
     }
+
+    function clearChat() { if(confirm("حذف كل الرسائل؟")) db.ref('msgs_v15').remove(); }
+    function changeName() { let n = prompt("اكتب اسمك الجديد:"); if(n) { me.name = n; localStorage.setItem('allosh_v15', JSON.stringify(me)); location.reload(); } }
 
     start();
 </script>
